css/main.css
/*! HTML5 Boilerplate v6.1.0 | MIT License | https://html5boilerplate.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

   html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
  }
  
  /*
   * Remove text-shadow in selection highlight:
   * https://twitter.com/miketaylr/status/12228805301
   *
   * Vendor-prefixed and regular ::selection selectors cannot be combined:
   * https://stackoverflow.com/a/16982510/7133471
   *
   * Customize the background color to match your design.
   */
  
  ::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
  }
  
  ::selection {
    background: #b3d4fc;
    text-shadow: none;
  }
  
  /*
   * A better looking default horizontal rule
   */
  
  hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
  }
  
  /*
   * Remove the gap between audio, canvas, iframes,
   * images, videos and the bottom of their containers:
   * https://github.com/h5bp/html5-boilerplate/issues/440
   */
  
  audio,
  canvas,
  iframe,
  img,
  svg,
  video {
    vertical-align: middle;
  }
  
  /*
   * Remove default fieldset styles.
   */
  
  fieldset {
    border: 0;
    margin: 0;
    padding: 0;
  }
  
  /*
   * Allow only vertical resizing of textareas.
   */
  
  textarea {
    resize: vertical;
  }
  
  /* ==========================================================================
     Browser Upgrade Prompt
     ========================================================================== */
  
  .browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
  }
  
  /* ==========================================================================
     Author's custom styles
     ========================================================================== */
  
  /* General Styles */
 
html {
  font-size: 16px;
	
}
 
body {
  font-family: 'Nunito Sans', sans-serif;
  font-size: 1rem;
 
}

img {
  width: 100%;
}

figure {
  margin: 0;
}
 
ul, 
ol {

list-style-type: none;
 
}
 
a {
  color: #e2e3ed;
  text-decoration: none;
	
}
 
h2 {
  font-family: 'Alata', sans-serif;
  font-size: 3rem;
  line-height: 3rem;
 
}
 
h3, 
h4 {
  font-family: 'Alata', sans-serif;
  font-size: 1.5rem;
  line-height: 2rem;

 
}
 
p {
font-family: 'Nunito Sans', sans-serif;
  font-size: 0.8rem;
  line-height: 1.2rem;
	
}
 
 
address {
font-family: 'Nunito Sans', sans-serif;
  font-size: 0.8em;
  line-height: 1.5em;
  font-style:normal;

}
  
  
  .content-wrapper {
    width: 90%;
    margin: 50px 0;
  }
  
  /* -------------------- Base Header - Footer Styles -------------------- */
  
  header,
  footer {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
  }
  
  header {
    padding: 15px 0;
    background: #202322;
  }
  
  header .content-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
    margin: 0;
  }
  
  .header-divider {
    width: 100%;
    height: 1px;
    margin: 10px 0 20px 0;
  }
  
  header nav {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-flow: row wrap;
    width: 100%;
  }
  
  header nav ul {
    display: flex;
    justify-content: space-around;
    width: 100%;
    text-transform: uppercase;
  }

  header figure {
    width: 60%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
}
  
  footer {
    flex-direction: column;
    background: #202322;
    color: white;
  }
  
  footer p {
    margin: 0;
  }
  
  footer .content-wrapper {
    width: 55%;
    margin: 50px 0;
  }
  
  footer .contact {
    margin-bottom: 50px;
  }
  
 

  footer figure {
    display: flex;
    justify-content: flex-start;
    align-items: center;

  }
  
  
  
  footer .copyright {
    margin: 20px 0;
    text-align: center;
  }
  
  
  /* -------------------- MOBILE STYLES-------------------- */
  
  /***** BASE STYLES *****/
body {
  color: #2b2b2b;
  font-family: 'Nunito Sans', sans-serif;
}



/***** HEADER *****/

header {
 
	
	display: flex;
	align-items: center;
	justify-content: center;
	flex-flow: row wrap; 
	width: 100%;
  background: #E8F0E4;
}


header h1 {
  color: #EC91C4;
  font-family: 'Alata', sans-serif;
  font-size: 3.5rem;
  
  text-align: center;

  
  
}
nav {

  display: flex;
  align-items: center;
	justify-content: center;
	flex-flow: row wrap; 
	width: 100%;
  

}

nav ul {

  text-align: center;
}
nav ul li {
  width: 100%;
  text-align: center;
 
}
nav ul li a {
  color: #351D77;
  font-size: 1em;
  padding: 1rem;
  text-decoration: none;
  text-transform: uppercase;
  text-align: center;
}

nav ul li a:hover {
  color: #9d9bc2;
}

nav button {
  border-radius: 12px;
  background-color: #f5c161;
  border: none;
  padding-right: 0px;
  padding-left: 0px
}

header h3 {
  clear: both;
  color: #9b9b9b;
  font-family: 'Alata', sans-serif;
  padding: 0.5rem;
  width: 70%;

}

/***** ABOUT *****/
#about .about-wrapper {
  display: block;
  width: 100%;
  padding-bottom: 60px;
  padding-top: 60px;
}

#about h2 {
  font-family: 'Alata', sans-serif;
  font-size: 3em;
  text-align: center;
  color: #351D77;
  margin-left: 10%;
  margin-right: 10%;
  width: 80%;
}

#about h3 {
  font-family: 'Alata', sans-serif;
  text-align: center;
  margin-left: 10%;
  margin-right: 10%;
  width: 80%;
  color: #9b9b9b;

}

#about p {
  color: #9b9b9b;
  font-size: 1em;
  line-height: 1.5em;
  text-align: center;
  padding-bottom: 40px;
  margin-left: 10%;
  margin-right: 10%;
  width: 80%;

}
/* ... */

